Phase 4 AP5: KB fortschreiben (Fernwartung umgedreht, Testzahlen, Roadmap)
kb/05-migration-plan.md: Roadmap-Haekchen "Maintenance umdrehen" gesetzt,
Arbeitspakete-Tabelle AP5 abgehakt, Aenderungslog-Eintrag "Phase 4 AP5" (voller
Umfang: Client-WS-Client, entfernte Alt-Server-Rolle, letzter DataManager-Zugriff
weg, Backend-Erweiterungen, Cross-Component-Nachfolger, Testzahlen), naechster
Schritt AP6.

kb/README.md: Status-Log-Zeile 2026-07-21.

kb/01-architecture.md: Kommunikationswege neu gezaehlt (Weg 1 Client<->DB
vollstaendig entfallen statt nur geschrumpft), Maintenance-Protokoll-Abschnitt als
fuer den Client stillgelegt markiert, ElwaManager-/configuration-Beschreibung
aktualisiert.

kb/02-data-model.md: locations.client_ip/-port/-uid/-last_seen als obsolet seit
AP5 markiert, Entfernung explizit auf Phase 5 verschoben (keine Migration).

kb/03-modules.md: neuer Abschnitt "Ausgehende Fernwartungs-Verbindung (AP5)"
(Client-Raspi), WS-Nachrichtentabelle um die AP5-Erweiterung von
STATUS_REQUEST/STATUS_RESPONSE ergaenzt, neuer Abschnitt zur
Cross-Component-Nachfolge-Suite, Alt-Portal-Hinweis (P21/P22 fachlich tot) und
Konfigurations-/Abhaengigkeiten-Absaetze aktualisiert.

kb/04-build-and-run.md: Client-Konfigurationsabschnitt ohne DB-Zugangsdaten/
Maintenance-Port, Truststore-Hinweis entfernt.

kb/06-ui-tests.md: neuer Abschnitt zur umgestellten Cross-Component-Suite
(Testaufbau, Harness, JavaFX-Modul-Pfad-Workaround), Testzahlen 46->43/28->25
begruendet, neue AP5-Roadmap-Zeile.

kb/08-test-plan.md: P21/P22-Abschnitt als abgeloest markiert (historischer
Alt-Stand bleibt dokumentiert), Verweis auf die neue Suite.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Fq8ASX8LE13n4CwuvWxbbu